# goit_homework_M2T11_V2

./: README.md  main.py  pyproject.toml
migrations/versions/: 58e4084023f8_nit.py
src/conf/: config.py
src/entity/: models.py
src/repository/: todos.py
src/routes/: todos.py
src/schemas/: todo.py
